tests/lean/goals1.lean.expected.out
goals1.lean:9:0: error: unsolved placeholder, unsolved subgoals
A : Type, a : A, b : A, c : A, Hab : eq a b, Hbc : eq b c ⊢ eq b c
goals1.lean:9:0: error: failed to add declaration 'foo' to environment, value has metavariables
  λ (A : Type) (a b c : A) (Hab : eq a b) (Hbc : eq b c),
    ?M_1
